--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=blog-api
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
