add CORS domains env variable

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+
+
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=myuser
@@ -11,3 +13,5 @@ server.ssl.key-alias=myapp
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG 
 logging.level.com.michael_gregory.blog_api.rest.BlogEntryController=DEBUG
+
+cors.allowedOrigins=https://localhost:3000,https://michaelgregory.dev,https://blog.michaelgregory.dev
