spring DI fixes, use env variable for secret key

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,4 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.michael_gregory.blog_api.rest.BlogEntryController=DEBUG
 
 cors.allowedOrigins=https://localhost:3000,https://michaelgregory.dev,https://blog.michaelgregory.dev
+security.secret-key=dev-secret-key-12345
