--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,4 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=myapp
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS}
+security.secret-key=${SECRET_KEY}
