--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -3,5 +3,10 @@
     "name": "cors.allowedOrigins",
     "type": "java.lang.String[]",
     "description": "A list of allowed origins for CORS requests."
+  },
+  {
+    "name": "security.secret-key",
+    "type": "java.lang.String",
+    "description": "A secure, randomly generated string used to sign and verify JSON Web Tokens (JWTs). This key should be kept confidential and must be strong (e.g., include uppercase, lowercase, numbers, and symbols) to ensure the integrity of the tokens."
   }
 ]}
