--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 spring.application.name=blog-api
 server.port=8443
