--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,10 +3,11 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 
-server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store=classpath:prod-keystore/keystore.p12
+# Keystore expiration: 17-Nov-2025
 server.ssl.key-store-password=${KEYSTORE_PASSWORD}
 server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=myapp
+server.ssl.key-alias=my-blog-key
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS}
 security.secret-key=${SECRET_KEY}
