--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=t
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
 
-server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store=classpath:dev-keystore/keystore.p12
 server.ssl.key-store-password=jujimufu
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=myapp
