use port 443 for https

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,8 @@
+server.port=443
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
 
 server.ssl.key-store=classpath:prod-keystore/keystore.p12
 # Keystore expiration: 17-Nov-2025
