disable https, lightsail will terminate https and route http to this service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 spring.application.name=blog-api
+#AWS Lightsail is handling HTTPS termination and forwarding traffic to Spring Boot application over plain HTTP
+server.ssl.enabled=false
