--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,18 +1,14 @@
-server.port=8443
+server.port=8080
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
 
-server.ssl.key-store=classpath:dev-keystore/keystore.p12
-server.ssl.key-store-password=jujimufu
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=myapp
-
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG 
 logging.level.com.michael_gregory.blog_api.rest.BlogEntryController=DEBUG
 
-cors.allowedOrigins=https://localhost:3000,https://michaelgregory.dev,https://blog.michaelgregory.dev
+cors.allowedOrigins=http://localhost:3000
+#key for jwt signing
 security.secret-key=dev-secret-key-12345
