--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
-server.port=443
+server.port=80
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS}
+#Key for JWT signing
 security.secret-key=${SECRET_KEY}
