use aurora dsql db instead of lightsail MySql db

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,24 @@
 server.port=8080
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=myuser
-spring.datasource.password=mypassword
+# spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+# spring.datasource.username=myuser
+# spring.datasource.password=mypassword
+
+# Properties for the users database
+spring.datasource.users.jdbc-url=jdbc:postgresql://{HOST}:{PORT}/postgres?sslmode=require
+spring.datasource.users.username=admin
+spring.datasource.users.driver-class-name=org.postgresql.Driver
+
+# Properties for the blog database
+spring.datasource.blog.jdbc-url=jdbc:postgresql://{HOST}:{PORT}/postgres?sslmode=require
+spring.datasource.blog.username=admin
+spring.datasource.blog.driver-class-name=org.postgresql.Driver
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG 
 logging.level.com.michael_gregory.blog_api.rest.BlogEntryController=DEBUG
+logging.level.org.springframework=DEBUG
 
 cors.allowedOrigins=http://localhost:3000
 #key for jwt signing
