--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,21 @@
 server.port=80
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+
+# Properties for the users database
+spring.datasource.users.jdbc-url=jdbc:postgresql://{HOST}:{PORT}/postgres?sslmode=require
+spring.datasource.users.username=yourUsersUsername
+#spring.datasource.users.driver-class-name=org.postgresql.Driver
+
+# Properties for the blog database
+spring.datasource.blog.jdbc-url=jdbc:postgresql://{HOST}:{PORT}/postgres?sslmode=require
+spring.datasource.blog.username=yourBlogUsername
+#spring.datasource.blog.driver-class-name=org.postgresql.Driver
+
+
+
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS}
 #Key for JWT signing
