use application properties for datasource values

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,14 +5,20 @@ server.port=8080
 # spring.datasource.username=myuser
 # spring.datasource.password=mypassword
 
+aws.region=us-east-1
+
 # Properties for the users database
-spring.datasource.users.jdbc-url=jdbc:postgresql://{HOST}:{PORT}/postgres?sslmode=require
 spring.datasource.users.username=admin
+spring.datasource.users.host=tuabt2pt3x4bvv6ywa2y2wm6n4.dsql.us-east-1.on.aws
+spring.datasource.users.port=5432
+spring.datasource.users.jdbc-url=jdbc:postgresql://${spring.datasource.users.host}:${spring.datasource.users.port}/postgres?sslmode=require
 spring.datasource.users.driver-class-name=org.postgresql.Driver
 
 # Properties for the blog database
-spring.datasource.blog.jdbc-url=jdbc:postgresql://{HOST}:{PORT}/postgres?sslmode=require
 spring.datasource.blog.username=admin
+spring.datasource.blog.host=jmabt2ny7wo7znmjjgf4fht7xe.dsql.us-east-1.on.aws
+spring.datasource.blog.port=5432
+spring.datasource.blog.jdbc-url=jdbc:postgresql://${spring.datasource.blog.host}:${spring.datasource.blog.port}/postgres?sslmode=require
 spring.datasource.blog.driver-class-name=org.postgresql.Driver
 
 logging.level.org.springframework.security=DEBUG
