--- a/pom.xml
+++ b/pom.xml
@@ -28,19 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<aws.java.sdk.version>2.30.16</aws.java.sdk.version>
 	</properties>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>software.amazon.awssdk</groupId>
-				<artifactId>bom</artifactId>
-				<version>${aws.java.sdk.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-  	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,11 +40,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<!-- MySQL Connector -->
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.7</version>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- Spring Data REST -->
@@ -106,32 +94,16 @@
 			<version>4.4.0</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/dsql -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>dsql</artifactId>
-			<version>2.30.16</version>
-		</dependency>
-
-		
+ 
 
  </dependencies>
 
 	<build>
-		<finalName>blog-api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.5.2</version>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
-        </plugin>
 		</plugins>
 	</build>
 
