--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,27 +1,8 @@
 server.port=80
 
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-
-aws.region=us-east-1
-
-# Properties for the users database
-spring.datasource.users.username=admin
-spring.datasource.users.host=nuabt2voobiwqjrmbne4b24bfi.dsql.us-east-1.on.aws
-spring.datasource.users.port=5432
-spring.datasource.users.jdbc-url=jdbc:postgresql://${spring.datasource.users.host}:${spring.datasource.users.port}/postgres?sslmode=require
-spring.datasource.users.driver-class-name=org.postgresql.Driver
-
-# Properties for the blog database
-spring.datasource.blog.username=admin
-spring.datasource.blog.host=aaabt2vonmzns3yu4m2lp4f4uu.dsql.us-east-1.on.aws
-spring.datasource.blog.port=5432
-spring.datasource.blog.jdbc-url=jdbc:postgresql://${spring.datasource.blog.host}:${spring.datasource.blog.port}/postgres?sslmode=require
-spring.datasource.blog.driver-class-name=org.postgresql.Driver
-
-
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS}
 #Key for JWT signing
