--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,21 @@
-server.port=80
-
+# -------------------------
+# Datasource
+# -------------------------
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+# -------------------------
+# JPA / Hibernate
+# -------------------------
+spring.jpa.hibernate.ddl-auto=update        # Creates missing tables and columns automatically
+#useful for debugging
+spring.jpa.show-sql=true
+
+# -------------------------
+# Server
+# -------------------------
+server.port=80
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS}
 #Key for JWT signing
