--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 spring.application.name=blog-api
 #AWS Lightsail is handling HTTPS termination and forwarding traffic to Spring Boot application over plain HTTP
 server.ssl.enabled=false
+
+# -------------------------
+# Datasource
+# -------------------------
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect # Optional, but recommended
