fix app properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,8 @@ spring.datasource.password=${DB_PASSWORD}
 # -------------------------
 # JPA / Hibernate
 # -------------------------
-spring.jpa.hibernate.ddl-auto=update        # Creates missing tables and columns automatically
+# Creates missing tables and columns automatically
+spring.jpa.hibernate.ddl-auto=update
 #useful for debugging
 spring.jpa.show-sql=true
 
