--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.ssl.enabled=false
 # -------------------------
 # Datasource
 # -------------------------
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect # Optional, but recommended
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
