--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,15 @@
 server.port=8080
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=myuser
-spring.datasource.password=mypassword
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
+spring.datasource.username=blog_user
+spring.datasource.password=password123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: Hibernate / JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG 
